--- a/build
+++ b/build
@@ -3,6 +3,7 @@
 
 if [ -d "package/translate" ]; then
 	echo "[build] translate dir found, running merge."
+	(cd package/translate && sh ./sync dailyforecast simpleweather)
 	(cd package/translate && sh ./merge && sh ./build)
 	if [ "$(git diff --stat .)" != "" ]; then
 		echo "[build] Changed detected. Cancelling build."
